# citadel

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  rust-toolchain  rust-toolchain.toml
.github/workflows/: dusk_ci.yml
benches/: citadel.rs
citadel/: Cargo.toml
citadel-shared/: CHANGELOG.md  Cargo.toml  Makefile
citadel-shared/src/: lib.rs  license.rs  state.rs  unit.rs
citadel/docs/academic-paper/: bibtex.bib
citadel/docs/academic-paper/images/: circuit_plus.eps  circuit_prove_nft.eps
citadel/docs/academic-paper/sections/: oursolution.tex
citadel/docs/specs/sections/: protocol.tex
citadel/src/: lib.rs  license.rs  state.rs
citadel/tests/: citadel.rs
contract/: CHANGELOG.md  Cargo.toml  README.md  build.rs
contract/src/: lib.rs  license_types.rs  main.rs  state.rs
contract/tests/: license_contract.rs
core/: CHANGELOG.md  Cargo.toml  README.md
core/benches/: license_circuit.rs
core/src/: circuit.rs  error.rs  gadgets.rs  helpers.rs  lib.rs  license.rs  request.rs  session.rs  signatures.rs
core/src/assets/: license.rs  mod.rs  request.rs  session.rs
core/src/zk/: circuit.rs  gadgets.rs  mod.rs
core/tests/: assets.rs  citadel.rs
docs/: security.md  specs.md
docs/academic-paper/: main.tex
docs/academic-paper/sections/: buildingblocks.tex  conclusions.tex  introduction.tex  preliminaries.tex
docs/specs/: main.tex
docs/specs/images/: circuit_prove_nft.eps  implementation.drawio  protocol.eps
docs/specs/sections/: definitions.tex  implementation.tex  overview.tex  protocol.tex
specs/: main.tex
specs/bib/: bibtex.bib
specs/circuit-diagram/: zedger_minimal_circuit.drawio
specs/images/: circuit_prove_nft.eps  circuit_prove_nft_offchain.eps  implementation.drawio  protocol.drawio
specs/secs/: application-layer.tex  building-blocks.tex  circuits.tex  crypto-primitives.tex  elements.tex  implementation.tex  keys.tex  license-contract.tex  overview.tex  participants-interaction.tex  protocol-flow.tex  protocol.tex
specs/sections/: definitions.tex  implementation.tex  overview.tex  protocol.tex
src/: gadget.rs  gadgets.rs  lib.rs  license.rs  main.rs  service.rs  state.rs  utils.rs
tests/: citadel.rs
wallet/: CHANGELOG.md  Cargo.toml  README.md
wallet/src/: citadel.rs  cli.rs  main.rs  state.rs  tui.rs
wallet/src/dusk/: mod.rs  query.rs  rusk_lib.rs  util.rs
