[package]
name = "zk-citadel-shared"
version = "0.2.0"
edition = "2021"

repository = "https://github.com/dusk-network/citadel"
description = "Implementation of Citadel, a SSI system integrated in Dusk Network."
categories = ["cryptography", "authentication", "mathematics", "science"]
keywords = ["cryptography", "self-sovereign", "identity", "zk-snarks", "zero-knowledge"]
license = "MPL-2.0"

[dependencies]
dusk-bls12_381 = { version = "0.11", default-features = false, features = ["rkyv-impl"] }
dusk-bytes = "0.1"
dusk-jubjub = { version = "0.12", default-features = false, features = ["rkyv-impl"] }
dusk-pki = { version = "0.11", default-features = false, features = ["rkyv-impl"] }
dusk-poseidon = { version = "0.28", default-features = false, features = ["rkyv-impl", "alloc"] }
dusk-merkle = { version = "0.2", features = ["rkyv-impl", "poseidon", "zk", "size_32"] }
dusk-plonk = { version = "0.13", default-features = false, features = ["rkyv-impl", "alloc"] }
dusk-schnorr = { version = "0.12", default-features = false, features = ["alloc"] }
#nstack = { version = "0.16" }
rkyv = { version = "0.7", default-features = false }
bytecheck = { version = "0.6", default-features = false }
