[package]
name = "license-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
execution-core = { version = "0.1.0", git = "https://github.com/dusk-network/rusk/", branch = "master", features = ["zk"] }
dusk-bytes = "=0.1.7"
rkyv = { version = "=0.7.39", default-features = false, features = ["size_32"] }
bytecheck = { version = "=0.6.12", default-features = false }
poseidon-merkle = { version = "=0.7.0", features = ["rkyv-impl"] }

[target.'cfg(target_family = "wasm")'.dependencies]
rusk-abi = { version = "0.13.0-rc.0", git = "https://github.com/dusk-network/rusk/", branch = "master", features = ["abi", "dlmalloc"] }

[build-dependencies]
zk-citadel = { path = "../core"}
dusk-plonk = { version = "0.20", default-features = false, features = ["rkyv-impl", "alloc"] }
rand_core = { version = "0.6", default-features=false, features = ["getrandom"] }
reqwest = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
build-print = "0.1.1"
sha2 = { version = "0.10.8", default-features = false }

[dev-dependencies]
rusk-abi = { version = "0.13.0-rc.0", git = "https://github.com/dusk-network/rusk/", branch = "master", default-features = false, features = ["host"] }
zk-citadel = { path = "../core"}
ff = { version = "=0.13.0", default-features = false }
rand = { version = "=0.8.5", default-features = false }
dusk-poseidon = "=0.40.0"
