[package]
name = "license-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dusk-bls12_381 = { version = "=0.14.1", default-features = false }
rkyv = { version = "=0.7.39", default-features = false, features = ["size_32"] }
bytecheck = { version = "=0.6.12", default-features = false }
poseidon-merkle = { version = "=0.8.0", features = ["rkyv-impl"] }

[target.'cfg(target_family = "wasm")'.dependencies]
dusk-core = { version = "=1.1.0", features = ["abi-dlmalloc"] }

[build-dependencies]
zk-citadel = { path = "../core"}
dusk-plonk = { version = "0.21", default-features = false, features = ["rkyv-impl", "alloc"] }
rand_core = { version = "0.6", default-features=false, features = ["getrandom"] }
reqwest = "0.12"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
build-print = "0.1.1"
sha2 = { version = "0.10.8", default-features = false }

[dev-dependencies]
zk-citadel = { path = "../core"}
ff = { version = "=0.13.0", default-features = false }
rand = { version = "=0.8.5", default-features = false }
dusk-poseidon = "=0.41.0"
dusk-bytes = "=0.1.7"
dusk-vm = "=1.1.0"
dusk-core = { version = "=1.1.0", features = ["zk"] }
