[package]
name = "zk-citadel"
version = "0.14.0"
repository = "https://github.com/dusk-network/citadel/core"
description = "Implementation of Citadel, a SSI system integrated in Dusk Network."
categories = ["cryptography", "authentication", "mathematics", "science"]
keywords = ["cryptography", "self-sovereign", "identity", "zk-snarks", "zero-knowledge"]
edition = "2024"
rust-version = "1.94"
license = "MPL-2.0"

[dependencies]
dusk-bytes = "0.1"
dusk-poseidon = { version = "0.42.0-rc.0", features = ["zk"] }
poseidon-merkle = { version = "0.9.0-rc.0", features = ["rkyv-impl", "zk", "size_32"] }
dusk-plonk = { version = "0.22", default-features = false, features = ["rkyv-impl", "alloc"] }
dusk-bls12_381 = { version = "0.14", default-features = false, features = ["rkyv-impl", "alloc"] }
dusk-jubjub = { version = "0.15", default-features = false, features = ["rkyv-impl", "alloc"] }
ff = { version = "0.13", default-features = false }
jubjub-schnorr = { version = "0.7.0-rc.0", features = ["zk", "rkyv-impl", "alloc"] }
phoenix-core = { version = "0.35", features = ["rkyv-impl", "alloc"] }
rand_core = { version = "0.6", default-features = false }
rkyv = { version = "0.7", default-features = false }
bytecheck = { version = "0.6", default-features = false }

[dev-dependencies]
criterion = "0.7"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }

[[bench]]
name = "license_circuit"
harness = false

[features]
rkyv-impl = []
std = ["dusk-plonk/std"]
default = ["rkyv-impl"]
